Add neutral button for DateDialog
Tag: #New

--- a/safedialog/src/main/res/values-ru/strings.xml
+++ b/safedialog/src/main/res/values-ru/strings.xml
@@ -4,6 +4,7 @@
     <!-- Dialog buttons -->
     <string name="dialog_btn_accept">Применить</string>
     <string name="dialog_btn_cancel">Отмена</string>
+    <string name="dialog_button_reset">Сброс</string>
 
     <string name="dialog_btn_yes">Да</string>
     <string name="dialog_btn_no">Нет</string>
