--- a/safedialog/src/main/res/values/strings.xml
+++ b/safedialog/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
-    <string name="app_name" translatable="false">SafeDialog</string>
 
     <!-- Dialog buttons -->
     <string name="dialog_btn_accept">Apply</string>
     <string name="dialog_btn_cancel">Cancel</string>
+    <string name="dialog_button_reset">Reset</string>
 
     <string name="dialog_btn_yes">Yes</string>
     <string name="dialog_btn_no">No</string>
