--- a/safedialog/src/main/res/values-ru/strings.xml
+++ b/safedialog/src/main/res/values-ru/strings.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- Dialog buttons -->
-    <string name="dialog_btn_accept">Применить</string>
-    <string name="dialog_btn_cancel">Отмена</string>
+    <string name="dialog_button_accept">Применить</string>
+    <string name="dialog_button_cancel">Отмена</string>
     <string name="dialog_button_reset">Сброс</string>
 
-    <string name="dialog_btn_yes">Да</string>
-    <string name="dialog_btn_no">Нет</string>
+    <string name="dialog_button_yes">Да</string>
+    <string name="dialog_button_no">Нет</string>
+
+    <string name="dialog_button_ok">ОК</string>
 
 </resources>
