Refactor assertion in dialogsUi classes
Tag: #Test

--- a/safedialog/src/main/res/values-ru/strings.xml
+++ b/safedialog/src/main/res/values-ru/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="dialog_button_accept">Применить</string>
+    <string name="dialog_button_apply">Применить</string>
     <string name="dialog_button_cancel">Отмена</string>
     <string name="dialog_button_reset">Сброс</string>
 
